--- a/tools/oncall/oncall.html
+++ b/tools/oncall/oncall.html
@@ -8,8 +8,7 @@ function get(uri, callback) {
 		// Matches /bucket/file/path -> [..., "bucket", "file/path"]
 		var groups = uri.match(/([^/:]+)\/(.*)/);
 		var bucket = groups[1], path = groups[2];
-		var url = 'https://www.googleapis.com/storage/v1/b/' + bucket + '/o/' +
-			encodeURIComponent(path) + '?alt=media';
+		var url = 'https://www.googleapis.com/storage/v1/b/' + bucket + '/o/' + encodeURIComponent(path) + '?alt=media';
 	} else {
 		var url = uri;
 	}
@@ -32,14 +31,14 @@ function build_table(req) {
 		var person = oncall[key];
 		html += '<h2>' + key + ': ';
 
-        if (person == "chaodai") {
-            person = "chaodaiG";
-        } else if (person == "syzf") { 
-            person = "steuhs";
-        } else if (person == "eklawitter") {
-            person = "ericKlawitter"; 
-        }
-        
+		if (person == "chaodai") {
+			person = "chaodaiG";
+		} else if (person == "syzf") { 
+			person = "steuhs";
+		} else if (person == "eklawitter") {
+			person = "ericKlawitter"; 
+		}
+
 		if (person) {
 			html += '<a href="https://github.com/' + person + '">';
 			html += person + '<img src="https://github.com/' + person + '.png?size=125"></a>';
