--- a/tools/oncall/oncall.html
+++ b/tools/oncall/oncall.html
@@ -31,15 +31,7 @@ function build_table(req) {
 		var key = keys[i];
 		var person = oncall[key];
 		html += '<h2>' + key + ': ';
-
-        if (person == "chaodai") {
-            person = "chaodaiG";
-        } else if (person == "syzf") { 
-            person = "steuhs";
-        } else if (person == "eklawitter") {
-            person = "ericKlawitter"; 
-        }
-        
+        //construct HTML content
 		if (person) {
 			html += '<a href="https://github.com/' + person + '">';
 			html += person + '<img src="https://github.com/' + person + '.png?size=125"></a>';
